@@ -20,14 +20,6 @@ test_that("Test 'guess' argument", {
     expect_true(length(tab2b) == 1)
 })
 
-test_that("Test 'columns' argument", {
-    TRUE # placeholder
-})
-
-test_that("Test 'area' argument", {
-    TRUE # placeholder
-})
-
 test_that("Import from remote file works", {
     f2 <- "https://github.com/tabulapdf/tabula-java/raw/master/src/test/resources/technology/tabula/12s0324.pdf"
     tab2 <- extract_tables(f2)
@@ -44,3 +36,25 @@ test_that("Import from remote non-Western file", {
     expect_true(is.matrix(tab3[[1]]))
 })
 
+test_that("Test 'area' argument", {
+    a4a <- list(c(122, 149, 536, 576))
+    tab4a <- extract_tables(sf, pages = 1, area = a4a, guess = FALSE, method = "data.frame")
+    expect_true(is.list(tab4a))
+    expect_true(is.data.frame(tab4a[[1]]))
+    expect_true(nrow(tab4a[[1]]) == 32)
+    expect_true(ncol(tab4a[[1]]) == 12)
+    a4b <- list(c(122, 149, 251, 464))
+    tab4b <- extract_tables(sf, pages = 1, area = a4b, guess = FALSE, method = "data.frame")
+    expect_true(is.list(tab4b))
+    expect_true(is.data.frame(tab4b[[1]]))
+    expect_true(nrow(tab4b[[1]]) == 9)
+    expect_true(ncol(tab4b[[1]]) == 8)
+})
+
+test_that("Test 'columns' argument", {
+    tab5 <- extract_tables(sf, pages = 1, columns = list(c(0, 612)), guess = FALSE)
+    expect_true(is.list(tab5))
+    expect_true(length(tab5) == 1)
+    expect_true(ncol(tab5[[1]]) == 2)
+    expect_true(nrow(tab5[[1]]) == 34)
+})
